# minGPT

./: .gitignore  demo.ipynb  pyproject.toml
mingpt/: trainer.py
projects/wikitext/: README.md  wikitext.py
