[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mingpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.2.4",
    "torch>=2.6.0",
    "datasets>=2.16.0",
    "tokenizers>=0.21.1",
    "setuptools>=78.1.0", # import triton fails without this
]

[tool.setuptools]
packages = ["mingpt"]
